--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,58 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.example</groupId>
-  <artifactId>AP_Forecast</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>Archetype - AP_Forecast</name>
-  <url>http://maven.apache.org</url>
+
+  <groupId>com.example</groupId>
+  <artifactId>hibernate-example</artifactId>
+  <version>1.0.0</version>
 
   <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- Correctly set encoding -->
+    <java.version>17</java.version>
+    <hibernate.version>6.2.5.Final</hibernate.version>
   </properties>
 
   <dependencies>
+    <!-- Hibernate Core -->
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+
+    <!-- Jackson -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.17.2</version>
     </dependency>
+
+    <!-- H2 Database (for testing) -->
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>5.8.2</version> <!-- Use a specific version -->
-      <scope>test</scope>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.2.224</version>
+      <scope>runtime</scope>
     </dependency>
-    <dependency>
-      <groupId>org.hibernate.orm</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>6.6.0.Final</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate.validator</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <version>6.2.0.Final</version> <!-- Ensure this is compatible -->
-    </dependency>
+
+    <!-- MySQL Driver (replace if using another DB) -->
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.7.2</version>
+      <version>42.7.2</version> <!-- Use the latest version available -->
+      <scope>runtime</scope>
+    </dependency>
+
+    <!-- Logging (SLF4J and Logback) -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.9</version>
     </dependency>
     <dependency>
-      <groupId>jakarta.persistence</groupId>
-      <artifactId>jakarta.persistence-api</artifactId>
-      <version>3.0.0</version> <!-- Ensure compatibility with Hibernate -->
-    </dependency>
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>7.7.0</version><!-- Specify an exact version -->
-      <scope>test</scope>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.12</version>
     </dependency>
   </dependencies>
 
@@ -60,35 +61,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version><!-- Ensure this is up-to-date -->
+        <version>3.11.0</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-
-          <!-- Set encoding for source files directly in the plugin configuration -->
-          <encoding>${project.build.sourceEncoding}</encoding>
-
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
-
-      <!-- Optional: Add other plugins as needed -->
     </plugins>
-
-    <!-- Resource configuration -->
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-
-        <!-- Include other resource types if needed -->
-        <includes><include>**/*.xml</include></includes><!-- Add other includes as necessary -->
-
-        <!-- Set encoding for resources -->
-        <!-- Enable filtering if needed -->
-        <!--<filtering>true</filtering>-->
-
-      </resource>
-    </resources>
-
   </build>
-
 </project>
